# circle-monitor

./: .gitignore  README.md  circle.txt  config.example.toml  pyproject.toml
deploy/gcp/: README.md  circle-monitor.env.example  circle-monitor.service
src/circle_monitor/: __init__.py  analysis.py  app.py  cli.py  config.py  dedupe.py  formatting.py  http.py  llm.py  logging_utils.py  models.py  repository.py  retry.py
src/circle_monitor/notifiers/: __init__.py  base.py  discord.py  slack.py  stdout.py  telegram.py
src/circle_monitor/sources/: base.py  rss.py  website.py
tests/: test_dedupe.py  test_repository.py
